--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Select ONE Additional
 
   <body>
     <h1>The Ocean</h1>
-    <h2>Press on the canvas to let the fish breath</h2>
+    <h2>Press on the canvas to make bubbles</h2>
     <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
   </body>
 </html>
